force-app/main/default/objects/Asset/fields/In_flight_Quantity__c.field-meta.xml
<CustomField>
    <fullName>In_flight_Quantity__c</fullName>
    <label>In-flight Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>