force-app/main/default/objects/Asset/fields/Inflight_Quote__c.field-meta.xml
<CustomField>
    <fullName>Inflight_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inflight Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>