force-app/main/default/objects/Asset/fields/Inflight_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Inflight_Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inflight Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Assets (Inflight Quote Line Item)</relationshipLabel>
    <relationshipName>Inflight_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>