force-app/main/default/objects/Asset/validationRules/Inflight_Quantity_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Inflight_Quantity_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( In_flight_Quantity__c ) ) , NOT(ISPICKVAL( Status ,&apos;In-flight Removal&apos;)))</errorConditionFormula>
    <errorDisplayField>In_flight_Quantity__c</errorDisplayField>
    <errorMessage>Inflight Quantity should be empty when changing the Asset Status.</errorMessage>
</ValidationRule>